@@ -145,7 +145,7 @@ TextureBufferRectangle::TextureBufferRectangle(PLRenderer::Renderer &cRenderer, 
 					m_nNumOfMipmaps = static_cast<uint32>(Math::Log2(static_cast<float>(Math::Max(m_vSize.x, m_vSize.y))));
 
 					// Build mipmaps automatically, no pre compressed image data can be used
-					gluBuild2DMipmaps(GL_TEXTURE_RECTANGLE_EXT, *pAPIPixelFormat, m_vSize.x, m_vSize.y, nAPIImageFormatUncompressed, nImageDataFormatUncompressed, pImageBuffer->GetData());
+					gluBuild2DMipmaps(GL_TEXTURE_RECTANGLE_EXT, *pAPIPixelFormat, m_vSize.x, m_vSize.y, nAPIImageFormatUncompressed, nImageDataFormatUncompressed, pImageBuffer->HasData() ? pImageBuffer->GetData() : nullptr);
 
 					// If compressed internal format, check whether all went fine
 					if (bCompressedFormat) {
@@ -156,7 +156,7 @@ TextureBufferRectangle::TextureBufferRectangle(PLRenderer::Renderer &cRenderer, 
 							m_nFormat = nImageFormat;
 							pAPIPixelFormat = cRendererOpenGL.GetAPIPixelFormat(m_nFormat);
 							if (pAPIPixelFormat)
-								gluBuild2DMipmaps(GL_TEXTURE_RECTANGLE_EXT, *pAPIPixelFormat, m_vSize.x, m_vSize.y, nAPIImageFormatUncompressed, nImageDataFormatUncompressed, pImageBuffer->GetData());
+								gluBuild2DMipmaps(GL_TEXTURE_RECTANGLE_EXT, *pAPIPixelFormat, m_vSize.x, m_vSize.y, nAPIImageFormatUncompressed, nImageDataFormatUncompressed, pImageBuffer->HasData() ? pImageBuffer->GetData() : nullptr);
 						}
 					}
 
@@ -183,7 +183,7 @@ TextureBufferRectangle::TextureBufferRectangle(PLRenderer::Renderer &cRenderer, 
 							if (bUsePreCompressedData && pMipmapImageBuffer->HasCompressedData())
 								glCompressedTexImage2DARB(GL_TEXTURE_RECTANGLE_EXT, nLevel, *pAPIPixelFormat, vSize.x, vSize.y, 0, pMipmapImageBuffer->GetCompressedDataSize(), pMipmapImageBuffer->GetCompressedData());
 							else
-								glTexImage2D(GL_TEXTURE_RECTANGLE_EXT, nLevel, *pAPIPixelFormat, vSize.x, vSize.y, 0, nAPIImageFormatUncompressed, nImageDataFormatUncompressed, pMipmapImageBuffer->GetData());
+								glTexImage2D(GL_TEXTURE_RECTANGLE_EXT, nLevel, *pAPIPixelFormat, vSize.x, vSize.y, 0, nAPIImageFormatUncompressed, nImageDataFormatUncompressed, pMipmapImageBuffer->HasData() ? pMipmapImageBuffer->GetData() : nullptr);
 
 							// If compressed internal format, check whether all went fine
 							if (bCompressedFormat) {
@@ -194,7 +194,7 @@ TextureBufferRectangle::TextureBufferRectangle(PLRenderer::Renderer &cRenderer, 
 									m_nFormat = nImageFormat;
 									pAPIPixelFormat = cRendererOpenGL.GetAPIPixelFormat(m_nFormat);
 									if (pAPIPixelFormat)
-										glTexImage2D(GL_TEXTURE_RECTANGLE_EXT, nLevel, *pAPIPixelFormat, vSize.x, vSize.y, 0, nAPIImageFormatUncompressed, nImageDataFormatUncompressed, pMipmapImageBuffer->GetData());
+										glTexImage2D(GL_TEXTURE_RECTANGLE_EXT, nLevel, *pAPIPixelFormat, vSize.x, vSize.y, 0, nAPIImageFormatUncompressed, nImageDataFormatUncompressed, pMipmapImageBuffer->HasData() ? pMipmapImageBuffer->GetData() : nullptr);
 								}
 							}
 						}
